--- a/site_ViveBio/public/css/editProfile.css
+++ b/site_ViveBio/public/css/editProfile.css
@@ -4,6 +4,22 @@
     border: 2px solid rgb(235, 78, 78);
 }
 
+.edit_user__btns{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.btn_delete_user{
+    background: rgb(255, 86, 86);
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid black;
+}
+
 .popup {
     width: 100%;
     height: 100vh;
@@ -101,6 +117,7 @@
     border-radius: 10px;
     border: 1px solid black;
     color: white;
+    margin: 30px 0;
 }
 
 .edit_user__dats h2 {
