--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -148,13 +148,11 @@
       <% if (locals.userLogin) { %> <% if (locals.userLogin &&
       (userLogin.rol=="admin" || userLogin.rol=="moderator" ) ) { %>
       <a href="/products/list"
-        ><i class="fas fa-user-cog" title="Configuraciones de Administrador"></i
-      ></a>
+        ><i class="fas fa-user-cog" title="Configuraciones de Administrador"></i></a>
       <% } %> <% } %>
       <a href="#"><i class="fa-solid fa-bell" title="Notificaciones"></i></a>
       <a href="/products/cart"
-        ><i class="fa-solid fa-cart-shopping" title="Carrito de compras"></i
-      ></a>
+        ><i class="fa-solid fa-cart-shopping" title="Carrito de compras"></i></a>
       <span id="btn_delete_favourite_desk" ><i class="fa-regular fa-heart" title="Favoritos"></i></span>
     </div>
   </nav>
