--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -3,15 +3,15 @@
   <div class="box_favourite_container" id="emergent_fav">
     <span class="tite_favourites">Favoritos</span>
     <span class="close_fav" id="close_fav"><i class="fas fa-times"></i></span>
-    <article class="box_favourite_product">
+    <!-- <article class="box_favourite_product">
       <span class="icon_delete_favourite" id="btn_delete_favourite"><i class="fas fa-times-circle"></i></span>
       <div class="box_favourite_product_image">
-        <img class="favourite_product_image" src="/images/products/Acondicionador-argán-03.jpg" alt="" />
+        <img class="favourite_product_image" src="/images/products/Acondicionador-argán-03.jpg" alt="" /> article de producto
       </div>
       <div class="box_favourite_product_description">
         <span class="favourite_product_description">title</span>
       </div>
-    </article>
+    </article> -->
   </div>
   <!-- </div> -->
   <div class="header_mobile-container" id="header_mobile">
