--- a/site_ViveBio/public/css/edit.css
+++ b/site_ViveBio/public/css/edit.css
@@ -3,6 +3,7 @@
     padding-bottom: 70px;
 }
 
+
 .edit_find{
     background-color: rgba(255, 255, 255, 0.9);
     text-align: center;
@@ -21,5 +22,8 @@
     }
     .edit_find input{
         width: 300px;
+    }
+    .camps_container2{
+        flex-direction: row;
     }
 }
