--- a/site_ViveBio/public/css/styles.css
+++ b/site_ViveBio/public/css/styles.css
@@ -14,7 +14,8 @@
 @import './user.css';
 @import './list.css';
 @import './error.css';
-@import'./editProfile.css';
-@import'./about.css';
-@import'./contact.css';
-@import'./Search.css';
+@import './editProfile.css';
+@import './about.css';
+@import './contact.css';
+@import './Search.css';
+@import './edit.css';
