--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -15,7 +15,7 @@
             <input type="radio" name="radio-btn" id="radio4">
             <!-- imagenes de carrusel -->
             <div class="slide first">
-              <p>"No heredamos la Tierra de nuestros ancestros, la tomamos prestadas de nuestros hijos" Proverbio nativo
+              <p>"No heredamos la Tierra de nuestros ancestros, la tomamos prestada de nuestros hijos" Proverbio nativo
                 americano</p>
               <div class="img_1"></div>
             </div>
