--- a/site_ViveBio/src/views/partials/footer.ejs
+++ b/site_ViveBio/src/views/partials/footer.ejs
@@ -1,10 +1,11 @@
 <footer>
     <section class="footer">
+        <div class="circle"></div>
     <div class="DatFooter">
         <ul class="direcciones__footer">
             <li><a href="/">Home</a></li>
             <li><a href="/products/all">Productos</a></li>
-            <li><a href="/contacto">Contacto</a></li>
+            <li><a href="/contact">Contacto</a></li>
             <li><a href="#">Política de devolución</a></li>
                     </ul>
         <div class="contacto__footer">
@@ -28,8 +29,11 @@
 </div>
 </section>
 <div class="copy__footer">
-    <a href="">Términos y condiciones</a>
-    <p>Argentina 2022 - Derechos reservados</p>
+    <a href="#">Términos y condiciones </a>
+    
+    <p>- Argentina 2022 - Derechos reservados</p>
 </div>
+
+
 </footer>
 
