--- a/site_ViveBio/src/views/contact.ejs
+++ b/site_ViveBio/src/views/contact.ejs
@@ -6,46 +6,68 @@
     <body class="contact">
         <%- include('./partials/header') %>
 
-        <main>
+        <main class="main_contact">
+      
             <section class="container"> 
-<div class="mapa">
+                <section class="contact_subcontainer">
+                    <div class="contact_image">
+                        <img src="/images/undraw_Social_thinking_re_y8cc.png" alt="">
+                    </div>
+                </section>
+                <section class="subcontainer2">
+                    <div class="mapa">
        
-            <h2>
-                Los esperamos!
-            </h2>
+                        <h2 id="titulos">
+                           Los esperamos!
+                         </h2>
        
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12389.578831121884!2d-58.9868221139591!3d-34.66541420308581!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc8f94a9034653%3A0x1b0543c64c78eca8!2sViveBio!5e0!3m2!1ses-419!2sar!4v1660697499088!5m2!1ses-419!2sar" style="border:8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <p class="contact_info">
-                <i class="fa-brands fa-square-whatsapp"> Cel: 0000000000</i>
-                <i class="fa-solid fa-at"> vivebioservices@gmail.com</i>
-                <i class="fa-solid fa-location-dot">Rodriguez s/n</i>
-            </p>
-        </div>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12389.578831121884!2d-58.9868221139591!3d-34.66541420308581!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc8f94a9034653%3A0x1b0543c64c78eca8!2sViveBio!5e0!3m2!1ses-419!2sar!4v1660697499088!5m2!1ses-419!2sar" style="border:8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <p class="contact_info">
+                        <i id="contact_icon" class="fa-brands fa-square-whatsapp"></i> <span>Cel: 0000000000</span>
+                        <i id="contact_icon" class="fa-solid fa-square-envelope"></i> <span>vivebioservices@gmail.com</span>
+                        <i id="contact_icon" class="fa-solid fa-map-location-dot"></i> <span>Rodriguez s/n, Prov. Buenos Aires, Argentina</span>
+                        </p>
+                    </div>
 
-<div class="formulario">
-    <h2>Tu opinión nos importa:</h2>
-            <form action="https://formsubmit.co/6df68d9767bbe778aa8bca7c6a39bc4d" method="POST">
-                <label for="name"></label>
-                <input class="contact_input" type="text" name="name" placeholder="Nombre">
+                    <div class="formulario">
+                        <h2 class="contact_opinion">Tu opinión nos importa:</h2>
+                        <form action="https://formsubmit.co/6df68d9767bbe778aa8bca7c6a39bc4d" method="POST">
+                            <label for="name"></label>
+                            <input class="contact_input" type="text" name="name" placeholder=" Nombre">
 
-                <label for="email"></label>
-                <input class="contact_input" type="email" name="email" placeholder="Email Address">
+                            <label for="email"></label>
+                            <input class="contact_input" type="email" name="email" placeholder=" Email">
 
-                <label for="subject"></label>
-                <input class="contact_input" type="text" name="subject" placeholder="Asunto">
+                            <label for="subject"></label>
+                            <input class="contact_input" type="text" name="subject" placeholder=" Asunto">
 
-                <label for="comments"></label>
-                <textarea class="contact_input" name="comments" cols="15" rows="5" placeholder="Comentario"></textarea>
+                            <label for="comments"></label>
+                            <textarea class="contact_input" name="comments" cols="15" rows="5" placeholder=" Comentario"></textarea>
 
-                <input type="submit" value="Enviar" class="enviar"></input>
+                            <input type="submit" value="Enviar" class="enviar"></input>
 
-                <input type="hidden" name="_next" value="http://localhost:3030/">
-                <input type="hidden" name="_captcha" value="false">
-            </form>
-        </div>
-        </section>
+                            <input type="hidden" name="_next" value="http://localhost:3030/">
+                            <input type="hidden" name="_captcha" value="false">
+                        </form>
+                        <div class="burbujas">
+                        <div class="burbuja"></div>
+                        <div class="burbuja"></div>
+                        <div class="burbuja"></div>
+                        <div class="burbuja"></div>
+                        <div class="burbuja"></div>
+                        <div class="burbuja"></div>
+                        <div class="burbuja"></div>
+                        <div class="burbuja"></div>
+                        <div class="burbuja"></div>
+                        <div class="burbuja"></div>
+                        </div>
+                    </div>
+                </section>
+       
+            </section>
         </main>
-  
+
+
         
 </body>
 
